[package]
name = "arbitors_wrap"
version = "0.1.0"
edition = "2021"
authors = ["Craig Warner"]
members = [
    "arbitor",
]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "2.0.0"}
colored = "2"
arbitor = {path = "arbitor"}